* March 23 2012 John Evans <john.g.evans.ne@gmail.com> -r3982
- Fixed NC_DUMP's missing file ID on a few lines (thanks to Michael Morrin).

* March 13 2012 John Evans <john.g.evans.ne@gmail.com> -r3981
- Disabling enhanced testing below R2011b

* March 01 2012 John Evans <john.g.evans.ne@gmail.com> -r3978
- Updated for R2012 support.

* February 28 2012 John Evans <john.g.evans.ne@gmail.com> -r3975
- Private function snc_turnoff_log4j modified to run just once per
- MATLAB session.

* February 22 2012 John Evans <john.g.evans.ne@gmail.com> -r3974
- Backwards incompatibility.  NC_INFO no longer returns single cellstr
- values for attributes.  They are instead returned as char arrays.  

* February 12 2012 John Evans <john.g.evans.ne@gmail.com> -r3966
- Fixed snctools for change in netcdf-java authentication.
- Updated README for clearer netcdf-java requirements.

* January 12 2012 John Evans <john.g.evans.ne@gmail.com> -r3958
- No support for HDF4 on R14.
- Updated the README for official HDF4 stance.

* January 05 2012 John Evans <john.g.evans.ne@gmail.com> -r3953
- Fixed catch-and-rethrow error situation on win64, 2008a, HDF4 layer.
- Was not warning about bad missing value / fill value situations.
- Fixed some bad testing situations with win64, 2008a configuration.

* December 18 2011 John Evans <john.g.evans.ne@gmail.com> -r3939
- Added NC_VARGETR, a 'raw' version of NC_VARGET.
- Removed support for HDF4 STD SCALING preference.
- Fixed bug that crept in NC_VARPUT, mexnc layer.

* December 13 2011 John Evans <john.g.evans.ne@gmail.com> -r3925
- Fixed testing directory issues (hopefully!)  Now we run the tests
- from outside of the test directory.  Fixed additional tests for
- NC_DUMP.

* December 02 2011 John Evans <john.g.evans.ne@gmail.com> -r3916
- mexnc NC_INFO backend made consistent with others on default "Group" name.
- Fixed tabs/spaces NC_DUMP bug with enhanced datatypes.
- Labeling unrecognized datatypes as 'UNRECOGNIZED'.